2001-07-09  Brent Welch <welch@panasas.com>
	* htdocs/access/index.tml: Fixed typo in section headers.
	* lib/doc.tcl: Fixed Doc_Cookie to look in the connection
	state (mime array) instead of relying on the environment variable.
	* lib/pkgIndex.tcl: Fixed to handle spaces in directory names.
	* lib/thread.tcl: Fixed Thread_IsFree

2001-03-19  Brent Welch <welch@panasas.com>
	* Added custom/ddehack.tcl example that I've been using to
	integrate exmh running on Unix and Netscape running on Windows.

2001-03-13  Brent Welch <welch@panasas.com>
	* Tagged and released tclhttpd-3-3

2001-03-12  Brent Welch <welch@panasas.com>
	(Adopted from work by Piet Vloet - thanks!)
	* lib/auth.tcl: Changes to handle multiple
	group and user specifications in .htaccess files.
	Also changed Auth_AccessFile to Auth_InitCrypt
	* htdocs/access/index.html: Updated docs 
	* htdocs/access/multiple: New tests
	* htaccess: sample group and password files.

2001-03-12  Brent Welch <welch@panasas.com>

	* ChangeLog:
	* bin/httpdthread.tcl: Updated to Auth_InitCrypt from Auth_AccessFile.
	* htdocs/x/hacks.tml: Switched from debug/parray to debug/pvalue,
	which is more general.  It takes a pattern of variables to print.
	* lib/status.tcl: Added StatusHeader procedure
	* lib/debug.tcl: Added check for Config(lib) directory
	to set of places used by /debug/source

2001-02-16  Brent Welch <welch@panasas.com>

	* ChangeLog:
	* INSTALL:
	* README:
	* WHATSNEW:
	* configure.in:
	* DIST_build/DIST:
	* DIST_build/Makefile.boot:
	* DIST_build/README:
	* lib/version.tcl:
	* bin/httpd.tcl:
	Changed version number to 3.3.  Gack - the .tcl files at
	least should be ".in" files.
	* bin/httpd.tcl:
	Fixed package require of TclX, which was never correct!

2001-01-31  Brent Welch <welch@ajubasolutions.com>

	* lib/upload.tcl: Added a file upload domain handler.
	Check out the definition of Upload_Url, which registers
	the domain, and UploadTest, which is the sample callback.